# gaboja

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: command.rs  data.rs  global_state.rs  infra.rs  main.rs
src/command/: executor.rs  parser.rs
src/infra/: browser.rs  console.rs  subprocess.rs
