[package]
name = "gaboja"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
dialoguer = { version = "0.11.0", features = ["history"], default-features = false }
indicatif = "0.17.8"
once_cell = "1.19.0"
regex = "1.10.4"
serde_json = "1.0.117"
similar = "2.5.0"
thirtyfour = "0.32.0"
tokio = { version = "1.37.0", features = ["time", "process", "rt"] }
