[package]
name = "gaboja"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Gaboja: CLI helper for solving BOJ problems"
homepage = "https://github.com/Bubbler-4/gaboja"
repository = "https://github.com/Bubbler-4/gaboja"
readme = "README.md"
keywords = ["cli", "web"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
console = "0.15.8"
dialoguer = { version = "0.11.0", features = ["history"], default-features = false }
indicatif = "0.17.8"
once_cell = "1.19.0"
regex = "1.10.4"
serde = "1.0.203"
serde_json = "1.0.117"
similar = { version = "2.5.0", features = ["inline"] }
thirtyfour = "0.32.0"
tokio = { version = "1.37.0", features = ["time", "process", "rt"] }
toml = "0.8.13"
